feat(navbar): added search, icons, categories

--- a/e-commerce-platform/tsconfig.json
+++ b/e-commerce-platform/tsconfig.json
@@ -19,7 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@components/*": ["./components/index.ts"],
+      "@utils/*": ["./utils/index.ts"]
     }
   },
   "include": [
